# Schach

./: Cargo.toml
src/: lookup_table.rs  main.rs  schach.rs
