[package]
name = "schach"
version = "0.1.0"
edition = "2021"

[profile.dev]
overflow-checks = false

[dependencies]
rand = "0.8.5"
rayon = "1.8.0"
chess-notation-parser = "0.2.3"
fastrand ={ version = "2.0.1", features = ["std"] }
lazy_static = "1.4.0"

[dependencies.sdl2]
version = "0.36.0"
features = ["image"]

